updated chrome version

--- a/Chrome/popup/popup.html
+++ b/Chrome/popup/popup.html
@@ -16,8 +16,9 @@
     <div id="minute"></div>
     <div id="second"></div>
     <label>Target Date: </label><input type='datetime-local' id='date'>
-    <button id="set">Set</button>
-
+    <button id="add">Add</button>
+    <br><button id="remove">Delete current timer</button>
+    <br><label>Choose a timer: <select id = "list">Timer</select></label>
 </body>
 
 </html>
